--- a/index.html
+++ b/index.html
@@ -2,20 +2,12 @@
 <html lang="DE">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="praxisbruhnwebseite.css">
-        <link rel="shortcut icon" href="icon/favicon.ico">
-        <meta name="keywords" content="Praxis, Arzt, Gastroenterologie, Gastroenterologe, Onkologie, Onkologe, Hämatologie, Hämatologe, Innere Medizin, Karlsruhe, Bruhn, Facharzt, Schwerpunktpraxis, Magenspiegelung, Darmspiegelung, Chemotherapie, Krebs, Tumor">
-        <meta name="description" content="Startseite der Praxis Dr. med. Norbert Bruhn in Karlsruhe Gastroenterologie / Onkologie / Hämatologie"/>
-        <title>Praxis Bruhn - Home</title>
+        <title>LUMISY | HOME</title>
+        <meta name="keywords" content="lumisy, lumisy discord, discord server, server, discord, lumisy server">
+        <meta name="description" content="Willkommen bei Lumisy | Entdecke Discord neu! :)"/>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div class="body-div">
-            <div class="tab-div">
-
-            </div>
-            <div class="main-div">
-                <iframe src="https://discord.com/widget?id=581498849378697241&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-            </div>
-        </div>
+            Hallo die Website ist noch nicht fertig.
     </body>
 </html>
