--- a/canditature.html
+++ b/canditature.html
@@ -2,7 +2,7 @@
 <html lang="de">
     <head>
         <meta charset="UTF-8">
-        <title>Lumisy | Startseite</title>
+        <title>Lumisy | Bewerbung</title>
         <link rel="shortcut icon" href="pictures/lumisy_logo.png">
         <meta name="keywords" content="lumisy, lumisy discord, discord server, server, discord, lumisy server">
         <meta name="description" content="Willkommen bei Lumisy | Entdecke Discord neu! :)"/>
