--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <meta name="viewport" content="width=device-width, inital-scale=1.0, user-scaleable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title>
             Divitae | Home
         </title>
@@ -32,8 +32,8 @@
                     </div>
                 </div>
             </div>
-            <div>
-                
+            <div >
+
             </div>
         </div>
     </body>
