--- a/index.html
+++ b/index.html
@@ -1,39 +1,25 @@
 <!DOCTYPE html>
-<html lang="de">
+<html>
     <head>
-        <meta charset="UTF-8">
+        <link rel="stylesheet" href="https://use.typekit.net/jym4zgx.css">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <title>
-            Divitae | Home
-        </title>
     </head>
     <body>
-        <div class="MainDiv">
-            <div class="MainNavDiv">
-                <div class="NavDiv">
-                    <a class="NavLink" href="">Home</a>
-                    <a class="NavLink" href="">Discord</a>
-                    <a class="NavLink" href="">Team</a>
-                    <a class="NavLink" href="">Kontakt</a>
-                    <a class="NavLink" href="">Impressum</a>
-                </div>
-                <div class="DescriptionDiv">
-                    <img class="DescriptionPicture" src="pictures/background.png" alt="background.png">
-                    <div class="DescriptionHyphen">
-                    </div>
-                    <div class="DescriptionContainerDiv">
-                        <span class="DescriptionHeading">
-                            Über uns
-                        </span><br><br>
-                        <span class="DescriptionContent">
-                            Herzlich willkommen bei <span class="DescriptionContentSpan">Divitae.eu</span>! Wir sind ein bekanntes Esports Team und immer auf der Suche nach neuen Herausforderung. Wenn du uns auf unserem weg begleiten willst, dann tritt unserer Community auf <a class="DescriptionContentLink" href="https://discord.gg/DN3eqkU8Yr">Discord</a> bei.
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <div >
+        <div class="main">
+            <div class="mnav">
 
+            </div>
+            <div class="unav">
+
+            </div>
+            <div class="nav">
+                <div class="database-icon-div">
+                    <svg width="20px" height="20px" viewBox="0 0 421.74 512">
+                        <path class="database-svg" d="M256,0C139.54,0,45.13,31.69,45.13,70.79v75.33c0,39.09,94.41,70.79,210.87,70.79s210.87-31.7,210.87-70.79V70.79C466.87,31.69,372.46,0,256,0Z" transform="translate(-45.13)"/>
+                        <path class="database-svg" d="M256,255.24c-116.46,0-210.87-31.69-210.87-70.78V293.94c0,39.1,94.41,70.79,210.87,70.79S466.87,333,466.87,293.94V184.46C466.87,223.55,372.46,255.24,256,255.24Z" transform="translate(-45.13)"/>
+                        <path class="database-svg" d="M256,402.51c-116.46,0-210.87-31.69-210.87-70.78V441.21C45.13,480.31,139.54,512,256,512s210.87-31.69,210.87-70.79V331.73C466.87,370.82,372.46,402.51,256,402.51Z" transform="translate(-45.13)"/>
+                    </svg>
+                </div>
             </div>
         </div>
     </body>
